objects/Employee__c.object
<CustomObject>
    <description>Store Employees from AT&amp;T: Custom object extension of User object to maintain attributes for specific tracks
. Retail Record Type: Identify Retail Employees type
. Center Record Type:  Identify Center-Care Employees type</description>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Channel of work associated with the employee</description>
        <label>Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Employee email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployeeId__c</fullName>
        <description>Employee ATT UID</description>
        <externalId>true</externalId>
        <label>Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>Employee&apos;s First name</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HireDate__c</fullName>
        <description>Hire Date. Used for Lead Distribution</description>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HomeStoreLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail Field. Unique Home Store Location associate to the employee. Used mostly for Lead Distribution process.</description>
        <label>Home Store Location</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field defines if this employee is an active employee or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Employee Last Name</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <description>Employee&apos;s Middle Name</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfAssociatedStores__c</fullName>
        <description>Retails Field. Number of associated stores to the employee. Used for Retail Store employee login and help user to determine/select the store where User is working with.</description>
        <label>Number of Associated Stores</label>
        <summaryFilterItems>
            <field>EmployeeStoreRetail__c.IsExpired__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>EmployeeStoreRetail__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <description>Employee&apos;s Office Phone</description>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PositionStartDate__c</fullName>
        <description>Retail Field. Position Start Date for Lead Distribution Perspective</description>
        <label>Position Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFProfileId__c</fullName>
        <label>Salesforce Profile Id</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARSM</fullName>
                </value>
                <value>
                    <fullName>DOS</fullName>
                </value>
                <value>
                    <fullName>RSC-MGR</fullName>
                </value>
                <value>
                    <fullName>RSC-REP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TerminationDate__c</fullName>
        <description>Retail Field. Employee Termination Date for Lead Distribution Purpose</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee relationship with Salesforce User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Store_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WirelessPhone__c</fullName>
        <description>Employee Wireless phone</description>
        <label>Wireless Phone</label>
        <type>Phone</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EmployeeId__c</columns>
        <columns>IsActive__c</columns>
        <columns>HomeStoreLocation__c</columns>
        <columns>Email__c</columns>
        <columns>SFProfileId__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Redistribution</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>HomeStoreLocation__c</columns>
        <columns>SFProfileId__c</columns>
        <columns>EmployeeId__c</columns>
        <columns>NumberOfAssociatedStores__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>rshan</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/8/2020 12:00 AM</value>
        </filters>
        <label>Redistribution</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Center</fullName>
        <active>true</active>
        <description>Record Type to group fields from Center-Care type of Employee</description>
        <label>Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <description>Record Type to group fields from Retail-Store type of Employee</description>
        <label>Retail</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>